--- a/CSS/padrao.css
+++ b/CSS/padrao.css
@@ -1,4 +1,3 @@
-/* Estilos Gerais */
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
@@ -16,6 +15,23 @@ header, nav ul, footer {
 
 header h1 {
     text-align: center;
+}
+
+nav {
+    position: absolute;
+    top: 100px;
+    left: 0;
+    width: 100%;
+    background-color: #0055a4;
+    color: #fff;
+    padding: 10px;
+    z-index: 1000; 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+main {
+    margin-top: 60px;
+    padding: 20px;
 }
 
 nav ul {
@@ -41,16 +57,12 @@ nav ul a:hover, nav ul a:focus {
     outline: none;
 }
 
-/* Footer */
 footer p {
     text-align: center;
     padding: 10px;
     margin: 0;
 }
 
-
-
-/* Responsividade */
 @media (max-width: 768px) {
     nav ul {
         flex-direction: column;
