--- a/CSS/index.css
+++ b/CSS/index.css
@@ -34,6 +34,10 @@
     text-align: center;
 }
 
+.beneficios_container h2{
+    color: #0055a4;
+}
+
 .beneficios {
     padding: 20px;
     display: flex;
@@ -74,7 +78,6 @@
     text-align: center;
     font-size: 1.8em;
     margin-bottom: 20px;
-    text-transform: uppercase;
     letter-spacing: 2px;
 }
 
